--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     ],
     "require": {
         "php": "^7.1||^8.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Lraveri\\GeojsonConverter\\": "src/"
+        }
     }
 }
